kubernetes/manifests/traefik-config/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-external
  namespace: traefik
  annotations:
    ignore-check.kube-linter.io/dangling-service: "Targets the Helm-managed Traefik deployment that is outside this raw manifest directory."
    metallb.universe.tf/loadBalancerIPs: "192.168.0.226"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  ports:
    - name: websecure
      port: 443
      targetPort: websecure
      protocol: TCP
  externalTrafficPolicy: Cluster
