kubernetes/manifests/traefik-config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    app.megascope.io/name: Traefik
    app.megascope.io/group: Networking
    app.megascope.io/icon: network
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - traefik.home.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: traefik
          port: 8080
          weight: 1
